trying to fix minor and major overflows css

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,11 +101,9 @@ h4{
     position:relative;
     justify-content: center;
     width: 300px;
-    margin: auto;
+    margin:0 10 0 10;
     display: flex;
-    flex-wrap: wrap;
-    overflow: auto;
-    
+    flex-wrap: wrap; 
 }
 p{
     color: white;
@@ -131,7 +129,7 @@ img {
     background-color: rgb(2, 200, 200);
     border-radius: 30px;
     position: absolute;
-    margin-top: 420px;
+    margin-top: 460px;
     justify-content: center;
     border-color: rgb(6, 74, 60);
     border-style: solid;
@@ -140,13 +138,11 @@ img {
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
-    background-color: rgb(2, 199, 199);
+    background-color: rgb(2, 200, 200);
     border-radius: 30px;
     position: absolute;
     justify-content: center;
     margin-top: 360px;
-
-
 }
 a{
     text-decoration: none;
@@ -165,7 +161,7 @@ a:hover{
     font-size: 17px;
     justify-content: start;
     position: absolute;
-    bottom: 140px;
+    bottom: 190px;
     left:70px;
     right:70px;
     padding:10px;
@@ -264,16 +260,18 @@ margin-top: 10px;
 .dropdown:hover .dropbutton:hover{
     background-color: darkcyan;
 }
-input{
+input {
     border-radius: 10px;
-    background-color: rgb(2, 200, 200);
+   background-color: rgb(2, 202, 202);
     padding: 6px;
+    color: white;
 }
 .ticket-options{
     margin-top: -220px;
     width: 250px;
     text-align: center;
     background-color:darkcyan;
+    margin-bottom: 40px;
     border-radius: 20px;
 }
 #tickets{
@@ -290,6 +288,11 @@ button{
     height: 100px;
 }
 /*sign-in*/
+.containerlogin{
+    display: flex;
+    flex-wrap: wrap;
+    height: 30px;
+}
 form{
     margin-left: 10px;
     height: 320px;
@@ -305,6 +308,7 @@ input[type=text]{
     border: 2px solid black;
     background-color: white;
     padding: 10px 30px 10px 10px;
+    color: black;
 }
 input[type=text]:hover{
 border:2px solid rgb(2, 200, 200);
@@ -322,6 +326,7 @@ input[type=text]:active{
 }
 fieldset{
     border-radius: 10px;
+    border-style: none;
 }
 
 /*media queries*/
@@ -365,5 +370,12 @@ font-size: 20px;
 .containerlogin{
  margin-right: 100px;
 }
-
+.ticket-options{
+    margin-bottom: 10px;
+}
+}
+@media (width >= 500px){
+    .ticket-options{
+        margin-bottom: 0px;
+    }
 }
